@@ -40,6 +40,7 @@ version next:
 - flite filter
 - Canopus Lossless Codec decoder
 - bitmap subtitles in filters (experimental and temporary)
+- MP2 encoding via TwoLAME
 
 
 version 0.11:
